# bevy_lots_of_entites_jam

./: .gitignore  Cargo.toml  build.sh  index.css  index.html
src/: assets.rs  main.rs  utils.rs
src/factory/: components.rs  mod.rs  systems.rs
src/navmesh/: components.rs  mod.rs  systems.rs
src/pawn/: components.rs  mod.rs  systems.rs
src/stone/: components.rs  mod.rs  systems.rs
src/ui/: factory_state.rs  game_state.rs  mod.rs  styles.rs
